# gsd-vibe

./: .gitignore  CLAUDE.md  M012-RECOVERY.md  README.md  audit-qol.sh  index.html  node_modules  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml  ci.yml  codeql.yml  gitleaks.yml  security.yml
.gsd/: DECISIONS.md  KNOWLEDGE.md  PROJECT.md  REQUIREMENTS.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
audit-reports/: final-compliance-certification.md  qol-coverage.md  requirement-evidence.md  tooltip-completion.md
e2e/: dashboard.spec.ts  guided-flow.spec.ts  navigation.spec.ts  projects.spec.ts  screenshots.spec.ts
playwright-report/: index.html
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: headless.rs  lib.rs  main.rs  security.rs
src-tauri/src/commands/: activity.rs  data.rs  dependencies.rs  filesystem.rs  git.rs  github.rs  gsd.rs  gsd2.rs  knowledge.rs  logs.rs  mod.rs  notifications.rs  onboarding.rs  projects.rs  pty.rs  search.rs  secrets.rs  settings.rs  snippets.rs  templates.rs  terminal.rs  watcher.rs
src-tauri/src/db/: mod.rs  tracing_layer.rs
src-tauri/src/models/: mod.rs
src-tauri/src/pty/: mod.rs
src-tauri/src/templates/blank/: README.md
src-tauri/src/templates/express-api/: README.md  package.json
src-tauri/src/templates/express-api/src/: index.ts
src-tauri/src/templates/go/: .gitignore  README.md  go.mod  main.go
src-tauri/src/templates/gsd-planning/: api.md  cli-tool.md  library.md  web-app.md
src-tauri/src/templates/nextjs/: .gitignore  README.md  package.json
src-tauri/src/templates/nextjs/src/app/: layout.tsx  page.tsx
src-tauri/src/templates/python-cli/: .gitignore  README.md  pyproject.toml
src-tauri/src/templates/python-cli/src/: cli.py
src-tauri/src/templates/python-fastapi/: .gitignore  README.md  pyproject.toml  run.py
src-tauri/src/templates/python-fastapi/src/: main.py
src-tauri/src/templates/react-vite-ts/: .gitignore  README.md  package.json
src-tauri/src/templates/react-vite-ts/src/: App.tsx
src-tauri/src/templates/rust-axum/: Cargo.toml  README.md
src-tauri/src/templates/rust-axum/src/: main.rs
src-tauri/src/templates/rust-cli/: Cargo.toml  README.md
src-tauri/src/templates/rust-cli/src/: main.rs
src-tauri/src/templates/svelte/: README.md  package.json
src-tauri/src/templates/svelte/src/routes/: +page.svelte
src-tauri/src/templates/tauri-app/: .gitignore  README.md  package.json
src-tauri/src/templates/tauri-app/src/: App.tsx
src-tauri/src/templates/tauri-app/src-tauri/: Cargo.toml
src-tauri/src/templates/tauri-app/src-tauri/src/: lib.rs  main.rs
src/components/: error-boundary.tsx
src/contexts/: terminal-context.test.tsx  terminal-context.tsx
website/: index.html
(+246 files in other folders)
