[package]
name = "{{project_name}}"
version = "0.1.0"
edition = "2021"
description = "A Tauri desktop application"

[lib]
name = "{{project_name}}_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
